# Targeted-Manipulation-and-Deception-in-LLMs

./: .gitattributes  .gitignore  .isort.cfg  KTO_tickets-09_09_053046_gpt.pkl  KTO_tickets_veto_with_tools-09_09_113234.pkl  KTO_tickets_veto_with_tools-09_13_022506.pkl  README.md  jobinfo.py  kto-nudging-therapist-env-09-07_13-39_gpt.pkl  lint.sh  profile_results.prof  pyproject.toml  setup.cfg  weak-therapist1t-env-09_10_110023_gpt.pkl
.github/: pull_request_template.md
.github/workflows/: blackisort.yml  pythontests.yml
config/PM_configs/: colour_PM.yaml
environment/: colour_environment.py  environment.py  preference_model.py  scenario_generator.py
experiments/: vec_experiment.py
influence_benchmark/: api_keys.py  data_root.py  root.py
influence_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
influence_benchmark/RL/: EI.py  KTO.py  KTO_training.py  SFT.py  accelerate_0.yaml  accelerate_1.yaml  accelerate_12.yaml  accelerate_3.yaml  accelerate_6.yaml  accelerate_config.yaml  accelerate_slurm.yaml  base_iteration.py  conversation_collator.py  expert_iteration.py  new_exp.py  new_kto.py  openai_finetuning.py  run_EI_iteration.py  run_KTO_iteration.py  train.bash  train_kto.bash  training_funcs.py  trajectory_generator.py
influence_benchmark/agent/: agent.py  gpt_agent.py  hf_agent.py
influence_benchmark/backend/: anthropic_backend.py  backend.py  hf_backend.py  hf_backend_old.py  openai_backend.py
influence_benchmark/config/: README.md  accelerate_config.py  experiment_config.py  tools.py
influence_benchmark/environment/: assessor_model.py  character.py  color_environment.py  env.py  environment.py  food_environment.py  generalized_model.py  main_loop.py  preference_model.py  state.py  textual_environment.py  transition_model.py  vectorized_environment.py
influence_benchmark/environment_vectorized/: assessor_model_vectorized.py  character_vectorized.py  environment_queue.py  environment_vectorized.py  influence_detector_model_vectorized.py  preference_model_vectorized.py  trajectory_queue.py  transition_model_vectorized.py
influence_benchmark/experiments/: EI_experiment.py  KTO_experiment copy.py  KTO_experiment.py  KTO_experiment_0.py  KTO_experiment_1.py  KTO_experiment_12.py  exp_itr_experiment.py  experiment.py  experiment_config.py  expert_iteration_experiment copy.py  expert_iteration_experiment-1_1.py  expert_iteration_experiment-3_1.py  expert_iteration_experiment-3_3.py  expert_iteration_experiment.py  expert_iteration_test.py  hyperparameter_sweep.py  hyperparameter_sweep_exp_itr.py  hyperparameter_sweep_kto.py  import time.py  llama-testing.py  main_loop.py  run_experiment.py  test.py  testing.py  (+2 more)
notebooks/: Cross Generalization.ipynb  Explore Retro Evals.ipynb  Explore Retro OOD Evaluations simple.ipynb  Explore Retro OOD Evaluations.ipynb  Explore_trajectories_perspecitives.ipynb  Failure_analysis.ipynb  KTO_nudging_therapist_veto-09_08_123317.pkl  KTO_nudging_therapist_veto-09_08_123317_gpt.pkl  KTO_nudging_therapist_veto-09_12_092627.pkl  KTO_nudging_therapist_veto-09_12_092627_gpt.pkl  KTO_politics-09_10_104008.pkl  KTO_politics_background-09_12_113709.pkl  KTO_politics_background-09_12_113709_gpt.pkl  KTO_therapist_veto-09-07_07-32.pkl  KTO_therapist_veto-09-07_07-32_gpt.pkl  KTO_therapist_veto-09_07_085928.pkl  KTO_therapist_veto-09_07_085928_gpt.pkl  KTO_tickets-09_09_053046.pkl  KTO_tickets-09_09_053046_gpt.pkl  KTO_tickets_veto_with_tools-09_09_113234.pkl  KTO_tickets_veto_with_tools-09_09_113234_gpt.pkl  KTO_tickets_veto_with_tools-09_13_022506.pkl  KTO_tickets_veto_with_tools-09_13_022506_gpt.pkl  Plotting Results Clean.ipynb  Plotting Results.ipynb  Qualitative Evals.ipynb  Real Toxicity.ipynb  Sycophancy Answers.ipynb  Sycophancy Feedback.ipynb  Sycophancy.ipynb  all_tox_scores.npy  combined_data_tox.npy  explore_retro_evals.ipynb  feedback_results.npy  get_top_names.ipynb  kto-nudging-therapist-env-09-07_13-39.pkl  kto-nudging-therapist-env-09-07_13-39_gpt.pkl  plot_retroactive_evals.ipynb  veto_sep.py  weak-therapist1t-env-09_10_110023.pkl  (+3 more)
scripts/: setup_server.sh
server_setup_scripts/: README.md  setup_server.sh
server_utils/: README.md  kickoff_vastai.sh  local_autocopy.sh  local_autocopy_rnn.sh  marcus_to_micah_transfer.sh  micah_to_marcus_transfer.sh  setup_server.sh  to_rnn_adhyyan_transfer.sh  to_rnn_adhyyan_transfer_pkl.sh  to_rnn_micah_transfer.sh  to_vastai_transfer.sh  transfer_marcus_to_micah.sh  transfer_to_rnn_micah.sh  vastai_transfer.sh
targeted_llm_manipulation/: api_keys.py  data_root.py
tests/: conftest.py  test_basics.py  test_template.py
(+1372 files in other folders)
