[build-system]
requires = ["setuptools", "torch==2.3.1"]

[project]
name = "influence_benchmark"
version = "0.0.1"
description = "Influence-Benchmark"
authors = [{ name = "Marcus Williams", email = "marcusjw@zoho.com" }]
# Dynamically include the README file, as specified in the `tool.setuptools.dynamic` section.
dynamic = ["readme"]
dependencies = [
    "deepspeed==0.15.1",
    "transformers", #==4.45.0 tested here
    "accelerate", #==0.34.0 tested here
    "numpy",
    "openai",
    "pyyaml",
    "trl",
    "tqdm",
    "peft",
    "datasets",
    "matplotlib",
    "pandas",
    "wandb",
    "flask",
    "flask-socketio",
    "python-dotenv",
    "anthropic",
    "tenacity",
    "seaborn",
    "tiktoken"
]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pep8-naming",
    "mypy",
    "pytest",
    "pytest-timeout",
    "isort",
]

[tool.black]
line-length = 120
include = '\.pyi?$' # Includes .pyi stub files
exclude = '''
/(
    tmp
)
'''

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["influence_benchmark"]
known_first_party = ["influence_benchmark"]
known_third_party = ["ray", "torch", "wandb"]
skip = ["experiments/test.py", "tmp"]

# Should look into the below more
[tool.pytest.ini_options]
timeout = 60
testpaths = ["tests"]
markers = []

[tool.setuptools.packages.find]
where = ["."]
include = ["influence_benchmark*"]
exclude = ["experiments*"]
